fix overflow glitch

--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    width:100vw;
     height:100vh;
     /* border:5px solid red; */
     display: flex; /* Use flex display to center its children */
